Prevent scrolling x and that p in the card overflow

--- a/src/sccs/styles.scss
+++ b/src/sccs/styles.scss
@@ -67,7 +67,7 @@ p{
 
   .modal-card-body{
     max-height: 80%;
-    overflow-y:auto;
+    overflow-x:auto;
   }
 
   .my-buttonShow{
